<resources>
    <string name="app_name">Nimble</string>
    <string name="version">v0.1-beta1</string>

    <!--NAVIGATION DRAWER-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notes">Notes</string>
    <string name="notebooks">Notebooks</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!--AUTHOR-->
    <string name="name">Kanupriya Pandey</string>
    <string name="role">Developer</string>
    <string name="description">I\'m a computer enthusiast and I love to code. I\'m currently pursuing Bachelors of Technology. I\'m also a bibliophile and share an equal love for music.  </string>
    <string name="name2">Aayush Rajput</string>
    <string name="description2">sample</string>

    <!--ABOUT-->
    <string name="about_support">Support Development</string>
    <string name="report_bug">Report bug</string>
    <string name="report_bug_sub">Report bug or request new features.</string>
    <string name="github">GitHub</string>
    <string name="github_sub">Fork the repo and push changes or submit new issues.</string>
    <string name="about_license">License</string>
    <string name="license">Library Licenses</string>
    <string name="license_sub">Check third-party libraries used in Notes .</string>
    <!--LINKS-->
    <string name="mail_link">Send Mail</string>
    <string name="github_link"><body><a href="https://github.com/KanupriyaPandey">Github Profile</a></body></string>
    <string name="github_link2"><body><a href="https://github.com/KanupriyaPandey">Github Profile</a></body></string>

    <!--MAIN-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image">Image Note</string>
    <string name="audio">Audio Note</string>
    <string name="text">Text Note</string>

    <!--Settings-->
    <string name="General">General</string>
    <string name="view_title">Views</string>
    <string name="list">List View</string>
    <string name="grid">Grid View</string>
    <string name="account_title">Account Picture</string>
    <string name="account_sub">Change account image.</string>
    <string name="Theme">Theme</string>
    <string name="base_title">Basic Theme</string>
    <string name="base_sub">Select a base theme.</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark  Theme</string>
    <string name="custom_title">Customize</string>
    <string name="custom_sub">Select from predefined themes.</string>
    <string name="primary_title">Primary Color</string>
    <string name="primary_sub">Main color used in app.</string>
    <string name="accent_title">Accent Color</string>
    <string name="accent_sub">Secondary color used in the app.</string>
    <string name="Advanced">Advanced</string>
    <string name="location_title">Location</string>
    <string name="location_sub">Enable Geotagging.</string>
    <string name="reset_title">Default</string>
    <string name="reset_sub">Restore to default settings.</string>
    <string name="reset_dialog">All your customizations will be lost.\nContinue?</string>

    <!--Notes-->
    <string name="done">Done</string>
    <string name="date">Date</string>
    <string name="title_share">Share</string>
    <string name="title_attach">Attach</string>
    <string name="title_background">Background</string>
    <string name="title_customise">Customise</string>
    <string name="speech_prompt">Say something to get started.</string>
    <string name="not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to start</string>

    <!--Bottom Sheet-->
    <string name="preview">Preview</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="mail">Mail</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="empty_bin">Empty Trash</string>
    <string name="notebook">Add to NoteBook</string>
    <string name="create_new_notebook">Create New NoteBook</string>
    <string name="start_recording">Tap here to start the recording</string>

    <!--Image-->
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="more">Customize</string>

    <string name="title_text">Text</string>
    <string name="text_style">Text Style</string>
    <string name="normal">Normal</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>

    <string name="text_font">Text Font</string>
    <string name="monospace">Monospace</string>
    <string name="casual">Casual</string>
    <string name="cursive">Cursive</string>
    <string name="serif">Sans-Serif</string>

    <string name="text_size">Text Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="title_brush">Brush</string>
    <string name="size">Brush Size</string>
    <string name="color">Brush Color</string>
    <string name="eraser">Brush Eraser</string>
    <string name="opacity">Color Opacity</string>

    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="filters">FILTERS</string>

    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>

    <string name="brush_eraser">ERASER</string>
    <string name="brush_size">SIZE</string>
    <string name="brush_color">COLOR</string>
    <string name="brush_opacity">OPACITY</string>

    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>
    <string name="tab_brush">BRUSH</string>

    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
</resources>
