<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_edit"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_notebooks"
            android:icon="@drawable/ic_notebook"
            android:title="@string/notebooks" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete"
            android:title="@string/trash" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />

    </group>
</menu>
