<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/theme_dialog"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="@dimen/default_spacing"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="@string/Theme"
        android:textSize="@dimen/medium_text"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_spacing">

        <RadioGroup
            android:id="@+id/radioGroupTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/light_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:checked="true"
                android:text="@string/light_theme"
                android:textColor="@color/accent"
                android:textSize="@dimen/medium_text"
                android:layoutDirection="rtl"
                android:textAlignment="textStart"
                android:layout_gravity="start" />

            <RadioButton
                android:id="@+id/dark_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/dark_theme"
                android:textColor="@color/accent"
                android:textSize="@dimen/medium_text"
                android:layoutDirection="rtl"
                android:textAlignment="textStart"
                android:layout_gravity="start" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>